--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
